<resources>
    <string name="app_name">Court Counter</string>
    <string name="reset">Reset</string>
    <string name="three_points">+3 Points</string>
    <string name="two_points">+2 Points</string>
    <string name="free_throw">Free Throw</string>
    <string name="score">0</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="scoring">The team <xliff id="team" example="A/B">%S</xliff> scored <xliff id="points" example="3/2/1">%i</xliff> point(s)</string>
    <string name="error_points">Something is wrong! Team: "<xliff id="team" example="A/B">%S</xliff>"; Points: "<xliff id="points" example="3/2/1">%i</xliff>"</string>
</resources>
