<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.courtcounter.MainActivity"
    android:orientation="vertical"
    android:layout_marginBottom="32dp"
    android:layout_marginTop="16dp"
    android:layout_marginLeft="24dp"
    android:layout_marginRight="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/text_view_team_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_a"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textSize="56sp"
                android:layout_marginBottom="24dp"/>

            <Button
                android:id="@+id/button_three_points_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_points"
                android:onClick="addThreeForTeamA"
                android:layout_marginBottom="8dp"/>

            <Button
                android:id="@+id/button_two_points_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_points"
                android:onClick="addTwoForTeamA"
                android:layout_marginBottom="8dp"/>

            <Button
                android:id="@+id/button_free_throw_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_throw"
                android:onClick="addOneForTeamA"/>

        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray">


        </View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/text_view_team_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/team_b"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                android:textSize="56sp"
                android:layout_marginBottom="24dp"/>

            <Button
                android:id="@+id/button_three_points_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/three_points"
                android:onClick="addThreeForTeamB"
                android:layout_marginBottom="8dp"/>

            <Button
                android:id="@+id/button_two_points_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/two_points"
                android:onClick="addTwoForTeamB"
                android:layout_marginBottom="8dp"/>

            <Button
                android:id="@+id/button_free_throw_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free_throw"
                android:onClick="addOneForTeamB"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:onClick="reset"/>

    </LinearLayout>

</LinearLayout>